# pygenstub

./: .coveragerc  .gitignore  .hgignore  .python-version  .travis.yml  AUTHORS.rst  CHANGES.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  azure-pipelines.yml  pygenstub.py  pygenstub.pyi  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  api.rst  conf.py  features.rst  index.rst  make.bat  requirements.txt
docs/source/: cli.rst  conf.py  features.rst  index.rst
stubs/docutils/: __init__.pyi  _compat.pyi  core.pyi  examples.pyi  frontend.pyi  io.pyi  nodes.pyi  statemachine.pyi
stubs/docutils/languages/: __init__.pyi  af.pyi  ca.pyi  cs.pyi  da.pyi  de.pyi  en.pyi  eo.pyi  es.pyi  fa.pyi  fi.pyi  fr.pyi  gl.pyi  he.pyi  it.pyi  ja.pyi  lt.pyi  lv.pyi  nl.pyi  pl.pyi  pt_br.pyi  ru.pyi  sk.pyi  sv.pyi  zh_cn.pyi  zh_tw.pyi
stubs/docutils/parsers/: __init__.pyi  null.pyi
stubs/docutils/parsers/rst/: __init__.pyi  roles.pyi  states.pyi  tableparser.pyi
stubs/docutils/parsers/rst/directives/: __init__.pyi  admonitions.pyi  body.pyi  html.pyi  images.pyi  misc.pyi  parts.pyi  references.pyi  tables.pyi
stubs/docutils/parsers/rst/languages/: __init__.pyi  af.pyi  ca.pyi  cs.pyi  da.pyi  de.pyi  en.pyi  eo.pyi  es.pyi  fa.pyi  fi.pyi  fr.pyi  gl.pyi  he.pyi  it.pyi  ja.pyi  lt.pyi  lv.pyi  nl.pyi  pl.pyi  pt_br.pyi  ru.pyi  sk.pyi  sv.pyi  zh_cn.pyi  zh_tw.pyi
stubs/docutils/readers/: __init__.pyi  doctree.pyi  pep.pyi  standalone.pyi
stubs/docutils/transforms/: __init__.pyi  components.pyi  frontmatter.pyi  misc.pyi  parts.pyi  peps.pyi  references.pyi  universal.pyi  writer_aux.pyi
stubs/docutils/utils/: __init__.pyi  code_analyzer.pyi  error_reporting.pyi  punctuation_chars.pyi  roman.pyi  smartquotes.pyi  urischemes.pyi
stubs/docutils/utils/math/: __init__.pyi  latex2mathml.pyi  math2html.pyi  tex2mathml_extern.pyi  tex2unichar.pyi  unichar2tex.pyi
stubs/docutils/writers/: __init__.pyi  _html_base.pyi  docutils_xml.pyi  manpage.pyi  null.pyi  pseudoxml.pyi
stubs/docutils/writers/html4css1/: __init__.pyi
stubs/docutils/writers/html5_polyglot/: __init__.pyi
stubs/docutils/writers/latex2e/: __init__.pyi
stubs/docutils/writers/odf_odt/: __init__.pyi  pygmentsformatter.pyi
stubs/docutils/writers/pep_html/: __init__.pyi
stubs/docutils/writers/s5_html/: __init__.pyi
stubs/docutils/writers/xetex/: __init__.pyi
tests/: example.py  test_cli.py  test_pygenstub.py  test_signatures.py  test_stub.py  test_utils.py
