[tool.poetry]
name = "pygenstub"
version = "1.4.1"
description = "Python stub file generator."
readme = "README.rst"

authors = ["H. Turgut Uyar <uyar@tekir.org>"]
license = "GPL-3.0+"

homepage = "https://tekir.org/pygenstub/"
documentation = "https://pygenstub.readthedocs.io/"
repository = "https://github.com/uyar/pygenstub"

keywords = ["type hints", "stub files", "docstring"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation"
]

include = [
    "CHANGES.rst",
    "*.pyi",
    "tests/**/*.py",
    "docs/source/**/*",
    "docs/Makefile"
]

[tool.poetry.dependencies]
python = "^3.4 || ~2.7"
docutils = "^0.15.2"
typing = {version = "^3.7.4", python = "~3.4 || ~2.7"}
pathlib2 = {version = "^2.3.5", python = "~3.4 || ~2.7"}

[tool.poetry.dev-dependencies]
pytest = "^4.6.9"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
flake8-isort = "^2.8.0"
flake8-docstrings = "^1.5.0"
black = {version = "^19.10b0", python = "^3.6"}
sphinx = {version = "^2.3.1", python = "^3.5"}
sphinx_rtd_theme = "^0.4.3"
tox = {version = "^3.14.3", python = "^3.5"}

[tool.poetry.scripts]
pygenstub = "pygenstub:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 96

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,37,36,35,34,27}, pypy{3,2}, style, docs
isolated_build = True

[testenv]
deps =
    pytest
    py34,py27,pypy2: typing
commands =
    pytest {posargs:tests}

[testenv:coverage]
basepython = python3.7
deps =
    {[testenv]deps}
    pytest-cov
commands =
    pytest --cov=pygenstub --cov-report=term-missing tests

[testenv:style]
basepython = python3.7
deps =
    flake8
    flake8-isort
    flake8-docstrings
commands =
    flake8 pygenstub.py

[testenv:docs]
basepython = python3.7
deps =
    sphinx
    sphinx_rtd_theme
changedir = docs/
commands =
    sphinx-build -b html source/ build/html/
"""
