[project]
name = "pygenstub"
version = "2.0.1"
description = "Python stub file generator."
readme = "README.rst"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

keywords = ["type hints", "stub files", "docstring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation"
]

requires-python = "~=3.7"
dependencies = [
    "docutils>=0.16",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "importlib-metadata; python_version < '3.8'",
]
lint = [
    "flake8",
    "flake8-isort",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    "pygenstub[tests,lint,docs]",
    "tox",
    "build",
]

[project.scripts]
pygenstub = "pygenstub:run"

[project.urls]
homepage = "https://tekir.org/pygenstub/"
documentation = "https://pygenstub.readthedocs.io/"
repository = "https://github.com/uyar/pygenstub"

[tool.isort]
lines_after_imports = 2
multi_line_output = 2
known_test = "pytest,unittest"
sections = "TEST,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{37,38,39,310,311}, pypy{37,38,39}, style, docs
isolated_build = True

[testenv]
extras = tests
commands =
    pytest {posargs:tests}

[testenv:coverage]
extras = tests
commands =
    pytest --cov=pygenstub --cov-report=term-missing tests

[testenv:style]
extras = lint
commands =
    flake8 pygenstub.py

[testenv:docs]
extras = docs
changedir = docs/
commands =
    sphinx-build -b html source/ build/html/
"""

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
